clients/flutter/orisun_flutter/lib/orisun_flutter_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset(
  'package:orisun_flutter/orisun_flutter_bindings_generated.dart',
)
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Uint32 Function()>()
external int orisun_abi_version();

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
>()
external ffi.Pointer<ffi.Char> orisun_open(
  ffi.Pointer<ffi.Char> data_directory,
  ffi.Pointer<ffi.Char> boundaries_json,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Uint64)>()
external ffi.Pointer<ffi.Char> orisun_close(int store_handle);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<ffi.Char> orisun_save_events(
  int store_handle,
  ffi.Pointer<ffi.Char> boundary,
  ffi.Pointer<ffi.Char> events_json,
  ffi.Pointer<ffi.Char> expected_position_json,
  ffi.Pointer<ffi.Char> query_json,
);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Int64,
    ffi.Int32,
  )
>()
external ffi.Pointer<ffi.Char> orisun_get_events(
  int store_handle,
  ffi.Pointer<ffi.Char> boundary,
  ffi.Pointer<ffi.Char> from_position_json,
  ffi.Pointer<ffi.Char> query_json,
  int count,
  int descending,
);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<ffi.Char> orisun_get_latest_by_criteria(
  int store_handle,
  ffi.Pointer<ffi.Char> boundary,
  ffi.Pointer<ffi.Char> query_json,
);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<ffi.Char> orisun_create_boundary_index(
  int store_handle,
  ffi.Pointer<ffi.Char> boundary,
  ffi.Pointer<ffi.Char> name,
  ffi.Pointer<ffi.Char> fields_json,
  ffi.Pointer<ffi.Char> conditions_json,
  ffi.Pointer<ffi.Char> combinator,
);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<ffi.Char> orisun_drop_boundary_index(
  int store_handle,
  ffi.Pointer<ffi.Char> boundary,
  ffi.Pointer<ffi.Char> name,
);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(
    ffi.Uint64,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
  )
>()
external ffi.Pointer<ffi.Char> orisun_subscribe(
  int store_handle,
  ffi.Pointer<ffi.Char> boundary,
  ffi.Pointer<ffi.Char> subscriber_name,
  ffi.Pointer<ffi.Char> after_position_json,
  ffi.Pointer<ffi.Char> query_json,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Uint64, ffi.Int64)>()
external ffi.Pointer<ffi.Char> orisun_subscription_next(
  int subscription_handle,
  int timeout_milliseconds,
);

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Uint64)>()
external ffi.Pointer<ffi.Char> orisun_subscription_stop(
  int subscription_handle,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void orisun_free_string(ffi.Pointer<ffi.Char> value);
